Refactor PdlPerson class to handle birth details #deploy-dolly-backend #deploy-test-dolly-backend
The birth details handling in the PdlPerson class has been refactored, changing 'foedsel' to 'foedselsdato' and 'foedested'. This change is reflected across multiple methods and services, ensuring consistent fetch and set operations on birth data throughout the application.